third_party/llvm-project/clang/test/Modules/Inputs/objcAtKeywordMissingEnd.h
@interface MissingEnd // expected-note {{class started here}}

@ // expected-error {{expected an Objective-C directive after '@'}} expected-error {{missing '@end'}}
